--- a/views/node.hbs
+++ b/views/node.hbs
@@ -1,8 +1,8 @@
 <h1> A NodeJS View </h1>
 
- {{message}}  <!-- This is the data that was passed from routes/app.js as the 'node' route. -->
+ <!-- {{message}} This is the data that was passed from routes/app.js as the 'node' route. --> 
 
-<form class="test-form" action="/message" method="post">
-    <input type="text" name="message">
+<form class="test-form" action="/" method="post"> <!-- The 'action' attribute will be set to '/' as this is the route that will handle this request. Psst, it's a POST request! -->
+    <input type="email" name="email">
     <button type="submit">Submit</button>
 </form>
