--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<my-app>Loading...</my-app>
+<my-app><img src="/images/loading.gif" /></my-app>
 
 <script src="/js/app/bundle.js"></script>
 </body>
