Notes for index.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,3 +13,4 @@
 <script src="/js/app/bundle.js"></script>
 </body>
 </html>
+<!-- This is all the code that will be used for index.hbs.  This is our entry point for the app and any additional changes for front end views will be handled in additional view / template files. -->
