--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,1 +1,2 @@
 <h1>Hello World!</h1>
+{{ content }} <!-- We can call angular components by using String Interpolation.  This is simply calling the component by its classname with double curly braces. -->
