--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,21 +1,23 @@
- <!-- {{ content }} We can call angular components by using String Interpolation.  This is simply calling the component by its classname with double curly braces. -->
+<!-- {{ content }} We can call angular components by using String Interpolation.  This is simply calling the component by its classname with double curly braces. -->
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <article class="panel panel-default">
-        <div class="panel-body">
-            {{ message.content }}
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <article class="panel panel-default">
+                <input type="text" [(ngModel)]="message.content">
+                <!-- ngModel is how Angular's two-way binding is used. I have set this input to control the content of the 'Message' component, and its attribute: content.  -->
+                <div class="panel-body">
+                    {{ message.content }}
+                </div>
+                <footer class="panel-footer">
+                    <div class="author">
+                        {{ message.author }}
+                    </div>
+                    <div class="config">
+                        <a href="#">Edit</a>
+                        <a href="#">Delete</a>
+                    </div>
+                </footer>
+            </article>
         </div>
-        <footer class="panel-footer">
-          <div class="author">
-            {{ message.author }}
-          </div>
-          <div class="config">
-            <a href="#">Edit</a>
-            <a href="#">Delete</a>
-          </div>
-        </footer>
-      </article>
     </div>
-  </div>
 </div>
