--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <base href="/">
-    <title>Angular 5 Messenger</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel='stylesheet' href='/stylesheets/style.css'/>
 
-</head>
-<body>
-<my-app><img src="/images/loading.gif"></img></my-app>
+    <head>
+        <base href="/">
+        <title>Angular 5 Messenger</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link rel='stylesheet' href='/stylesheets/style.css' />
+    </head>
 
-<script src="/js/app/bundle.js"></script>
-</body>
+    <body>
+        <my-app><img src="/images/loading.gif"></img>
+        </my-app>
+
+        <script src="/js/app/bundle.js"></script>
+    </body>
+
 </html>
 <!-- This is all the code that will be used for index.hbs.  This is our entry point for the app and any additional changes for front end views will be handled in additional view / template files. -->
