Create entry point for app-message

--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            
+            <app-message></app-message> <!-- This is the entry point for our 'message' component as seen as the 'selector' in message.component.ts -->
         </div>
     </div>
 </div>
