--- a/assets/app/messages/message.component.html
+++ b/assets/app/messages/message.component.html
@@ -6,10 +6,10 @@
     </div>
     <footer class="panel-footer">
         <div class="author">
-            {{ message.author }}
+            {{ message.username }}
         </div>
         <div class="config">
-            <a href="#">Edit</a>
+            <a href="#" (click)="onEdit()">Edit</a> <!-- Binding an event handler is quick with Angular.  ' (click)="myHandlerFunction" '  Is all you need.  -->
             <a href="#">Delete</a>
         </div>
     </footer>
