--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -2,7 +2,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <app-message [myMessageAliasName]="message" (editClicked)="message.content = $event" ></app-message> <!-- This is the entry point for our 'message' component as seen as the 'selector' in message.component.ts   It also listens for an event called 'editClicked' which I defined in message.component.ts as a @Output() event. -->
+            <app-message
+                [myMessageAliasName]="message"
+                (editClicked)="message.content = $event"
+                *ngFor="let message of messages"> <!-- We can use the 'structural directive' *ngFor to create a loop that will iterate through all of our message array. -->
+            </app-message> <!-- This is the entry point for our 'message' component as seen as the 'selector' in message.component.ts   It also listens for an event called 'editClicked' which I defined in message.component.ts as a @Output() event. -->
         </div>
     </div>
 </div>
