--- a/assets/app/messages/message.component.html
+++ b/assets/app/messages/message.component.html
@@ -1,4 +1,4 @@
-<article class="panel panel-default">
+<article class="panel panel-default" [ngStyle]="">
     <input type="text" [(ngModel)]="message.content">
     <!-- ngModel is how Angular's two-way binding is used. I have set this input to control the content of the 'Message' component, and its attribute: content.  -->
     <div class="panel-body">
