Creat input component

--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,6 +1,10 @@
 <!-- {{ content }} We can call angular components by using 'string interpolation'.  This is simply calling the component by its classname with double curly braces. -->
 <div class="container">
     <div class="row">
+        <app-message-input></app-message-input>
+    </div>
+    <hr>
+    <div class="row">
         <app-message-list></app-message-list>
     </div>
 </div>
