Moved MessageService to app component

--- a/assets/app/messages/message.component.html
+++ b/assets/app/messages/message.component.html
@@ -1,5 +1,5 @@
 <article class="panel panel-default" [ngStyle]="">
-    <input type="text" [(ngModel)]="message.content">
+    <!-- <input type="text" [(ngModel)]="message.content"> -->
     <!-- ngModel is how Angular's two-way binding is used. I have set this input to control the content of the 'Message' component, and its attribute: content.  -->
     <div class="panel-body">
         {{ message.content }}
