--- a/assets/app/messages/message-input.component.html
+++ b/assets/app/messages/message-input.component.html
@@ -7,7 +7,8 @@
                 id="content"
                 class="form-control"
                 ngModel
-                name="content">
+                name="content"
+                required>
         </div>
         <button class="btn btn-primary" type="submit">Save</button>
     </form>
