--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,7 @@
         <title>Angular 5 Messenger</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel='stylesheet' href='/stylesheets/style.css' />
+        <link rel="icon" type="image/x-icon" href="/favicon.png" />
     </head>
 
     <body>
