Fixed email input validation

--- a/assets/app/auth/signup.component.html
+++ b/assets/app/auth/signup.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" id="email" class="form-control" formControlName="email">
+            <input type="email" id="email" class="form-control" formControlName="email">
         </div>
         <div class="form-group">
             <label for="password">Password</label>
