--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <my-app><img src="/images/loading.gif"></img>
+        <my-app><img src="/images/loading.gif" class="loading-icon"></img>
         </my-app>
 
         <script src="/js/app/bundle.js"></script>
