--- a/assets/app/messages/message.component.html
+++ b/assets/app/messages/message.component.html
@@ -8,7 +8,7 @@
         <div class="author">
             {{ message.username }}
         </div>
-        <div class="config">
+        <div class="config" *ngIf="belongsToUser()">
             <a (click)="onEdit()">Edit</a> <!-- Binding an event handler is quick with Angular.  ' (click)="myHandlerFunction" '  Is all you need.  -->
             <a (click)="onDelete()">Delete</a>
         </div>
