add error selector

--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -4,3 +4,4 @@
     <hr>
     <router-outlet></router-outlet> <!-- This looks like an HTML element, but is actually an Angular directive that tells it where to initialize the router component. ( On our 'index' page.) -->
 </div>
+<app-error></app-error>
