--- a/assets/app/errors/error.component.html
+++ b/assets/app/errors/error.component.html
@@ -1,5 +1,5 @@
 <div class="backdrop" [ngStyle]="{'display' : display}"></div>
-<div class="modal fade" tabindex="-1" role="dialog" [ngStyle]="{'display' : display}">
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display' : display}">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -7,7 +7,7 @@
         <h4 class="modal-title">{{ error?.title }}</h4>
       </div>
       <div class="modal-body">
-        <p{{ error?.message }}</p>
+        <p>{{ error?.message }}</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default"  (click)="onErrorHandled()">Close</button>
